<resources>
    <string name="app_name">Lucidity</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="register_new">Register</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_caregiver_password">Caregiver Password</string>
    <string name="title_activity_medical_history">Medical History</string>
    <string name="title_activity_demographics">Demographics</string>
    <string name="prompt_name">Name</string>
    <string name="games">Memory \n Tests</string>
    <string name="photos">Photos</string>
    <string name="reminders">Reminders</string>
    <string name="action_settings">Settings</string>
    <string name="hint_education">Please select your education</string>
    <string name="title_activity_med_history_demo">MedHistoryDemo</string>
    <string name="care_menu">Caregiver Menu</string>
    <string name="settings_menu">Settings Menu</string>
</resources>
