<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobile.lucidity.lucidity.CaregiverHomePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="100dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/game_button"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:text="@string/games"
                android:textColor="#fff" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/longbutton" />
        </FrameLayout>


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/Photos"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:text="@string/photos"
                android:textColor="#fff" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/longbutton" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/reminders"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:text="@string/reminders"
                android:textColor="#fff" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/longbutton" />
        </FrameLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
